--- a/MyApp/pom.xml
+++ b/MyApp/pom.xml
@@ -10,6 +10,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12-beta-1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
