--- a/MyWebApp/pom.xml
+++ b/MyWebApp/pom.xml
@@ -27,5 +27,10 @@
   		<artifactId>jsf-impl</artifactId>
   		<version>2.2.8-02</version>
   	</dependency>
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
   </dependencies>
 </project>
