--- a/MyWebApp/pom.xml
+++ b/MyWebApp/pom.xml
@@ -32,5 +32,11 @@
 		<artifactId>log4j</artifactId>
 		<version>1.2.17</version>
 	</dependency>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>3.0-alpha-1</version>
+		<scope>provided</scope>
+	</dependency>
   </dependencies>
 </project>
